# gpcr-aminergic-benchmarks

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: dataset_aminergic_v1.yaml  features_v1.yaml
data/kinase_reference/: README.md  chembl_to_uniprot.json
data/kinase_reference/benchmark_v1/: per_seed_metrics.csv
data/kinase_reference/splits/: random_split.json  scaffold_split.json  target_split.json
data/processed/v1/: per_target_plddt.csv  protein_sequences.json
data/processed/v1/per_target/: per_target_elasticnet_random.csv  per_target_elasticnet_scaffold.csv  per_target_elasticnet_target.csv  per_target_esm_fp_mlp_random.csv  per_target_esm_fp_mlp_scaffold.csv  per_target_esm_fp_mlp_target.csv  per_target_fusion_random.csv  (+14 more)
docs/: data_card.md
notebooks/: 05_scaffold_diversity.ipynb  06_plddt_analysis.ipynb  07_cross_class_comparison.ipynb
results/: README.md
results/gpcr_v1_benchmark/: all_seeds_metrics.csv  multi_seed_aggregated.csv  multi_seed_pairwise.csv
results/supplement/: per_target_metrics_scaffold.csv  structure_provenance.csv
results/tables/: 01_dataset_summary.csv  02_headline_rmse.csv  03_hypothesis_outcomes.csv  03_hypothesis_outcomes_h1.csv  03_hypothesis_outcomes_h2.csv  03_hypothesis_outcomes_h3.csv  03_hypothesis_outcomes_h4.csv  04_metric_correlations.csv  04_metric_correlations_scaffold.csv
scripts/: build_gpcr_esm.py  build_gpcr_features.py  build_gpcr_splits.py  compute_per_target_gpcr_metrics.py  compute_per_target_plddt.py  compute_scaffold_metrics.py  curate_gpcr_data.py  fetch_gpcr_data.py  run_gpcr_benchmark.py
src/gpcr_aminegric_benchmarks/: __init__.py  target_class.py
src/gpcr_aminergic_benchmarks/: target_class.py
src/gpcr_aminergic_benchmarks/analyses/: __init__.py  scaffold_diversity.py
